--- a/hw_leeson3_part1.ipynb
+++ b/hw_leeson3_part1.ipynb
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -518,10 +518,10 @@
     {
      "data": {
       "text/plain": [
-       "<mpl_toolkits.mplot3d.art3d.Poly3DCollection at 0x14b4ce630>"
+       "<mpl_toolkits.mplot3d.art3d.Poly3DCollection at 0x140050a90>"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -547,13 +547,13 @@
     "ax[0].set_xlabel('X Label')\n",
     "ax[0].set_ylabel('Y Label')\n",
     "ax[0].set_zlabel('Z Label')\n",
-    "ax[0].axes.set_aspect('equal')\n",
+    "ax[0].axes.set_aspect('equal', adjustable='box')\n",
     "\n",
     "ax[1].view_init(15, 80)\n",
     "ax[1].set_xlabel('X Label')\n",
     "ax[1].set_ylabel('Y Label')\n",
     "ax[1].set_zlabel('Z Label')\n",
-    "ax[1].axes.set_aspect('equal')\n",
+    "ax[1].axes.set_aspect('equal', adjustable='box')\n",
     "\n",
     "\n",
     "aa=1\n",
