--- a/hw_lesson8.ipynb
+++ b/hw_lesson8.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
        "-10.000000000000002"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
        "array([1.8, 1.1])"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
        "(-1, 3)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
        "array([-9.2       ,  0.9       ,  6.46666667])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
        "       [ 0.53333333,  0.1       , -0.13333333]])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
        "array([-9.2       ,  0.9       ,  6.46666667])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
        " array([15.2817306 ,  9.59852942,  3.65197794]))"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
        "array([-0.76979505,  0.03751835, -0.16349016, -0.21671144,  0.21805317])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
        "0.7152321111819737"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -343,30 +343,6 @@
       " [ 7.  8.  9.  1.]]\n",
       "rank расширенной матрицы с: 3\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:11: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
-      "To use the future default and silence this warning we advise to pass `rcond=None`, to keep using the old, explicitly pass `rcond=-1`.\n",
-      "  # This is added back by InteractiveShellApp.init_path()\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(array([[-7.69444444],\n",
-       "        [-0.61111111],\n",
-       "        [ 6.47222222]]),\n",
-       " array([], dtype=float64),\n",
-       " 2,\n",
-       " array([1.68481034e+01, 1.06836951e+00, 1.47280825e-16]))"
-      ]
-     },
-     "execution_count": 68,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -378,9 +354,37 @@
     "C=np.concatenate((A,B.T),axis=1)\n",
     "print(C)\n",
     "print(\"rank расширенной матрицы с:\",np.linalg.matrix_rank(C))\n",
-    "# совместного решения нет: определить =0, ранги матриц и расширенной матрицы не равны\n",
-    "\n",
-    "np.linalg.lstsq(A,B.T)"
+    "# совместного решения нет: определить =0, ранги матриц и расширенной матрицы не равны"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "определитель матрицы А:  60\n",
+      "rank А: 3\n",
+      "[[ 1.  2.  3. 12.]\n",
+      " [ 4.  0.  6.  2.]\n",
+      " [ 7.  8.  9.  1.]]\n",
+      "rank расширенной матрицы с: 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "A_ = np.array([[1,2,3],[4,0,6],[7,8,9]], float)\n",
+    "det = 1*(0*9-6*8)-2*(4*9-7*6)+3*(4*8-7*0)\n",
+    "print(\"определитель матрицы А: \", det)\n",
+    "print(\"rank А:\",np.linalg.matrix_rank(A))\n",
+    "B_ = np.array([12,2,1])\n",
+    "np.linalg.solve(A_,B_)\n",
+    "C=np.concatenate((A,B.T),axis=1)\n",
+    "print(C)\n",
+    "print(\"rank расширенной матрицы с:\",np.linalg.matrix_rank(C))\n"
    ]
   },
   {
