--- a/hw_lesson8.ipynb
+++ b/hw_lesson8.ipynb
@@ -8,7 +8,9 @@
    "source": [
     "%matplotlib inline\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import scipy\n",
+    "import scipy.linalg"
    ]
   },
   {
@@ -151,7 +153,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Решите линейную систему:"
+    "## 1. Решите линейную систему:"
    ]
   },
   {
@@ -221,12 +223,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# 2. Найдите псевдорешение:\n",
+    "## 2. Найдите псевдорешение:\n",
     "# x + 2y – z = 1\n",
     "# 3x – 4y = 7\n",
     "# 8x – 5y + 2z = 12\n",
@@ -317,14 +317,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "псевдорешение вектор xyz = [1.13919353, -0.90498444, -0.9009803 ]"
+    "### псевдорешение вектор xyz = [1.13919353, -0.90498444, -0.9009803 ]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Сколько решений имеет линейная система:"
+    "## 3. Сколько решений имеет линейная система:"
    ]
   },
   {
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +371,8 @@
       "[[ 1.  2.  3. 12.]\n",
       " [ 4.  0.  6.  2.]\n",
       " [ 7.  8.  9.  1.]]\n",
-      "rank расширенной матрицы с: 3\n"
+      "rank расширенной матрицы с: 3\n",
+      "[-9.2         0.9         6.46666667]\n"
      ]
     }
    ],
@@ -381,11 +382,108 @@
     "print(\"определитель матрицы А: \", det)\n",
     "print(\"rank А:\",np.linalg.matrix_rank(A))\n",
     "B_ = np.array([12,2,1])\n",
-    "np.linalg.solve(A_,B_)\n",
+    "\n",
     "C=np.concatenate((A,B.T),axis=1)\n",
     "print(C)\n",
-    "print(\"rank расширенной матрицы с:\",np.linalg.matrix_rank(C))\n"
+    "print(\"rank расширенной матрицы с:\",np.linalg.matrix_rank(C))\n",
+    "print(np.linalg.solve(A_,B_))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Вычислите LU-разложение матрицы:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "432.00000000000017\n",
+      "определитель матрицы А:  432.00000000000017\n",
+      "rank А: 3\n",
+      "\n",
+      " P:\n",
+      " [[0. 1. 0.]\n",
+      " [0. 0. 1.]\n",
+      " [1. 0. 0.]]\n",
+      "\n",
+      " L:\n",
+      " [[ 1.    0.    0.  ]\n",
+      " [ 0.25  1.    0.  ]\n",
+      " [ 0.5  -0.4   1.  ]]\n",
+      "\n",
+      " U:\n",
+      " [[  4.    28.    73.  ]\n",
+      " [  0.    -5.   -15.25]\n",
+      " [  0.     0.   -21.6 ]]\n",
+      "\n",
+      "Вектор:  [[2 2 3]]\n",
+      "\n",
+      " Рассширенная матрица С:\n",
+      " [[ 1.  2.  3.  2.]\n",
+      " [ 2. 16. 21.  2.]\n",
+      " [ 4. 28. 73.  3.]]\n",
+      "rank расширенной матрицы С: 3\n",
+      "L⋅y=b\n",
+      "y=[2,1.5,2.6]\n",
+      "U⋅x=y\n",
+      "x=[2.227,0.067,-0.120]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A =np.array([[1,2,3],[2,16,21],[4,28,73]],float)\n",
+    "print(np.linalg.det(A))\n",
+    "print(\"определитель матрицы А: \", np.linalg.det(A))\n",
+    "print(\"rank А:\",np.linalg.matrix_rank(A))\n",
+    "P,L,U = scipy.linalg.lu(A)\n",
+    "B = np.array([[2,2,3]])\n",
+    "print(\"\\n P:\\n\",P)\n",
+    "print(\"\\n L:\\n\",L)\n",
+    "print(\"\\n U:\\n\",U)\n",
+    "print(\"\\nВектор: \",B)\n",
+    "C=np.concatenate((A,B.T),axis=1)\n",
+    "print(\"\\n Рассширенная матрица С:\\n\",C)\n",
+    "print(\"rank расширенной матрицы С:\",np.linalg.matrix_rank(C))\n",
+    "print(\"L⋅y=b\")\n",
+    "y1=2\n",
+    "y2=2-2*0.25\n",
+    "y3=3-0.5*2+0.4*(2-2*0.25)\n",
+    "print(f\"y=[{y1},{y2},{y3}]\")\n",
+    "print(\"U⋅x=y\")\n",
+    "x3=y3/(-21.6)\n",
+    "x2=(y2+x3*15.25)/(-5)\n",
+    "x1=(y1-x2*28 - x3*73)/4\n",
+    "print(f\"x=[{x1:.3f},{x2:.3f},{x3:.3f}]\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
