--- a/hw_lesson8.ipynb
+++ b/hw_lesson8.ipynb
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -432,9 +432,14 @@
       " [ 4. 28. 73.  3.]]\n",
       "rank расширенной матрицы С: 3\n",
       "L⋅y=b\n",
-      "y=[2,1.5,2.6]\n",
+      "y=[2.0,1.5,2.6]\n",
       "U⋅x=y\n",
-      "x=[2.227,0.067,-0.120]\n"
+      "Ответ: x=[2.227,0.067,-0.120]\n",
+      "\n",
+      "проверка\n",
+      " [[2.]\n",
+      " [3.]\n",
+      " [2.]]\n"
      ]
     }
    ],
@@ -453,23 +458,42 @@
     "print(\"\\n Рассширенная матрица С:\\n\",C)\n",
     "print(\"rank расширенной матрицы С:\",np.linalg.matrix_rank(C))\n",
     "print(\"L⋅y=b\")\n",
-    "y1=2\n",
-    "y2=2-2*0.25\n",
-    "y3=3-0.5*2+0.4*(2-2*0.25)\n",
+    "y1=B[0][0]*L[0][0]\n",
+    "y2=(B[0][1]-y1*L[1][0])/L[1][1]\n",
+    "y3=(B[0][2]-y1*L[2][0]-L[2][1]*y2)/L[2][2]\n",
     "print(f\"y=[{y1},{y2},{y3}]\")\n",
     "print(\"U⋅x=y\")\n",
-    "x3=y3/(-21.6)\n",
-    "x2=(y2+x3*15.25)/(-5)\n",
-    "x1=(y1-x2*28 - x3*73)/4\n",
-    "print(f\"x=[{x1:.3f},{x2:.3f},{x3:.3f}]\")"
+    "x3=y3/U[2][2]\n",
+    "x2=(y2-x3*U[1][2])/U[1][1]\n",
+    "x1=(y1-x2*U[0][1] - x3*U[0][2])/U[0][0]\n",
+    "print(f\"Ответ: x=[{x1:.3f},{x2:.3f},{x3:.3f}]\")\n",
+    "\n",
+    "x=np.array([[x1,x2,x3]])\n",
+    "\n",
+    "# проверка\n",
+    "\n",
+    "print(\"\\nпроверка\\n\",np.inner(A,x))\n",
+    "\n",
+    "# http://mathhelpplanet.com/static.php?p=chislennyye-metody-resheniya-slau"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "B = np.array([[2,2,3]])\n",
+    "print(B[0][2])"
+   ]
   },
   {
    "cell_type": "code",
