--- a/hw_lesson8.ipynb
+++ b/hw_lesson8.ipynb
@@ -598,34 +598,87 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "z = x+2*y-1"
+    "## 6. Найдите одно из псевдорешений вырожденной системы:"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Determinant A: 0.0\n",
+      "\n",
+      "matrix Q\n",
+      " [[-0.12309149  0.90453403  0.40824829]\n",
+      " [-0.49236596  0.30151134 -0.81649658]\n",
+      " [-0.86164044 -0.30151134  0.40824829]]\n",
+      "\n",
+      "matrix R\n",
+      " [[-8.12403840e+00 -9.60113630e+00 -1.10782342e+01]\n",
+      " [ 0.00000000e+00  9.04534034e-01  1.80906807e+00]\n",
+      " [ 0.00000000e+00  0.00000000e+00 -1.77635684e-15]]\n",
+      "\n",
+      "matrix R1\n",
+      " [[-8.1240384  -9.6011363 ]\n",
+      " [ 0.          0.90453403]]\n",
+      "\n",
+      "matrix B1\n",
+      " [-8.73949586  1.20604538]\n",
+      "\n",
+      "matrix X1\n",
+      " [-0.5         1.33333333]\n",
+      "\n",
+      "псевдорешение\n",
+      " [-0.5         1.33333333  0.        ]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1.4240006242195842"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = np.array([[1,2,3],[4,5,6],[7,8,9]],float)\n",
+    "B = np.array([2,5,7])\n",
+    "print(f\"Determinant A: {np.linalg.det(A):.1f}\\n\")\n",
+    "Q,R = np.linalg.qr(A)\n",
+    "print(\"matrix Q\\n\",Q)\n",
+    "print(\"\\nmatrix R\\n\",R)\n",
+    "R1 = R[:2,:2]\n",
+    "print(\"\\nmatrix R1\\n\",R1)\n",
+    "B1 = np.dot(np.transpose(Q),B)[:2]\n",
+    "print(\"\\nmatrix B1\\n\",B1)\n",
+    "X1 = np.linalg.solve(R1,B1)\n",
+    "print(\"\\nmatrix X1\\n\",X1)\n",
+    "# одно из псевдорешений - склейка с нулевым вектором \n",
+    "X = np.append(X1,0) \n",
+    "print(\"\\nпсевдорешение\\n\",X)\n",
+    "print(\"\\nнорма этого псевдорешения\\n\",np.linalg.norm(X))\n",
+    "print(\"\\nнорма этого псевдорешения\\n\",np.linalg.norm(X))\n",
+    "\n",
+    "\n",
+    "# нормальное псевдорешение это псевдорешение с минимальной нормальной"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
