--- a/hw_lesson8.ipynb
+++ b/hw_lesson8.ipynb
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -636,18 +636,23 @@
       " [-0.5         1.33333333]\n",
       "\n",
       "псевдорешение\n",
-      " [-0.5         1.33333333  0.        ]\n"
+      " [-0.5         1.33333333  0.        ]\n",
+      "\n",
+      "норма этого псевдорешения\n",
+      " 1.4240006242195842\n",
+      "\n",
+      "норма всех псевдорешений\n",
+      " 0.40824829046386285\n",
+      "(array([0.02777778, 0.27777778, 0.52777778]), array([], dtype=float64), 2, array([1.68481034e+01, 1.06836951e+00, 1.47280825e-16]))\n"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "1.4240006242195842"
-      ]
-     },
-     "execution_count": 141,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:18: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
+      "To use the future default and silence this warning we advise to pass `rcond=None`, to keep using the old, explicitly pass `rcond=-1`.\n"
+     ]
     }
    ],
    "source": [
@@ -667,7 +672,8 @@
     "X = np.append(X1,0) \n",
     "print(\"\\nпсевдорешение\\n\",X)\n",
     "print(\"\\nнорма этого псевдорешения\\n\",np.linalg.norm(X))\n",
-    "print(\"\\nнорма этого псевдорешения\\n\",np.linalg.norm(X))\n",
+    "print(\"\\nнорма всех псевдорешений\\n\",np.linalg.norm(np.dot(A,X)-B))\n",
+    "print(np.linalg.lstsq(A,B))\n",
     "\n",
     "\n",
     "# нормальное псевдорешение это псевдорешение с минимальной нормальной"
