--- a/hw_lesson8.ipynb
+++ b/hw_lesson8.ipynb
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -643,7 +643,10 @@
       "\n",
       "норма всех псевдорешений\n",
       " 0.40824829046386285\n",
-      "(array([0.02777778, 0.27777778, 0.52777778]), array([], dtype=float64), 2, array([1.68481034e+01, 1.06836951e+00, 1.47280825e-16]))\n"
+      "(array([0.02777778, 0.27777778, 0.52777778]), array([], dtype=float64), 2, array([1.68481034e+01, 1.06836951e+00, 1.47280825e-16]))\n",
+      "\n",
+      " нормалльное псевдорешения\n",
+      " 0.5970607047739662\n"
      ]
     },
     {
@@ -674,7 +677,8 @@
     "print(\"\\nнорма этого псевдорешения\\n\",np.linalg.norm(X))\n",
     "print(\"\\nнорма всех псевдорешений\\n\",np.linalg.norm(np.dot(A,X)-B))\n",
     "print(np.linalg.lstsq(A,B))\n",
-    "\n",
+    "Xn=np.array([0.02777778, 0.27777778, 0.52777778])\n",
+    "print(\"\\n нормалльное псевдорешения\\n\",np.linalg.norm(Xn))\n",
     "\n",
     "# нормальное псевдорешение это псевдорешение с минимальной нормальной"
    ]
