--- a/hw_lesson8.ipynb
+++ b/hw_lesson8.ipynb
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -645,8 +645,8 @@
       " 0.40824829046386285\n",
       "(array([0.02777778, 0.27777778, 0.52777778]), array([], dtype=float64), 2, array([1.68481034e+01, 1.06836951e+00, 1.47280825e-16]))\n",
       "\n",
-      " нормалльное псевдорешения\n",
-      " 0.5970607047739662\n"
+      " нормалльное псевдорешение Xn: \n",
+      " [0.02777778 0.27777778 0.52777778]  норма Xn: 0.5970607047739662\n"
      ]
     },
     {
@@ -673,22 +673,41 @@
     "print(\"\\nmatrix X1\\n\",X1)\n",
     "# одно из псевдорешений - склейка с нулевым вектором \n",
     "X = np.append(X1,0) \n",
-    "print(\"\\nпсевдорешение\\n\",X)\n",
+    "print(\"\\nпсевдорешение X\\n\",X)\n",
     "print(\"\\nнорма этого псевдорешения\\n\",np.linalg.norm(X))\n",
     "print(\"\\nнорма всех псевдорешений\\n\",np.linalg.norm(np.dot(A,X)-B))\n",
     "print(np.linalg.lstsq(A,B))\n",
     "Xn=np.array([0.02777778, 0.27777778, 0.52777778])\n",
-    "print(\"\\n нормалльное псевдорешения\\n\",np.linalg.norm(Xn))\n",
+    "print(\"\\n нормалльное псевдорешение Xn: \\n\",Xn, \" норма Xn:\", np.linalg.norm(Xn))\n",
     "\n",
     "# нормальное псевдорешение это псевдорешение с минимальной нормальной"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 175,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1.4240006242195842\n"
+     ]
+    }
+   ],
+   "source": [
+    "# x_n = np.linspace(-20,20,20000)\n",
+    "# min = 1.4240006242195842\n",
+    "# x0=0\n",
+    "# for i in x_n:\n",
+    "#     X = np.append(X1,i)\n",
+    "#     nnn = np.linalg.norm(X)\n",
+    "#     if min > nnn:\n",
+    "#         x0=i\n",
+    "#         min=nnn\n",
+    "# print(x0,min)\n"
+   ]
   }
  ],
  "metadata": {
